--- a/OpenV2EX/Info.plist
+++ b/OpenV2EX/Info.plist
@@ -24,6 +24,11 @@
 	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
+		<key>NSExceptionDomains</key>
+		<dict>
+			<key>v2ex.com</key>
+			<string></string>
+		</dict>
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
